fixed spelling errors in html.index, and align the flex style in css more.

--- a/style.css
+++ b/style.css
@@ -10,14 +10,17 @@ header {
     background-color: #1F2937;
     display: flex;
     flex-direction: column;
+    padding: 5px 160px;
 }
 
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    gap: 24px;
     display: flex;
     align-items: baseline;
+    justify-content: center;
 }
 
 a { 
@@ -28,21 +31,19 @@ a {
 
 .front {
     display: flex;
-    padding: 80px 95px;
+
 }
 
 .front div {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    width: 200px;
-    flex: 0;
 }
 
 .logo {
     font-size: 24px;
     color: #f9faf8;
-    flex: 0;
+    margin-right: auto;
 }
 
 .front img{
